DDF-2773: Address comments - Clean up unit tests - Fix error where updating config would incorrectly return duplicate source error - Refactor Request Utils slightly for more reusability - Add UriField